Ng16 (#31)
* new extenstions

* remove web compile from config

* depup

* config update

* update to web app, nodemon, swagger fix

* graphql

* new tests

* update to swagger yaml

* yaml fix

* graphql login bug fix

* depups

* update to web-app

* ci update

* simplify web app build

* update compose command

* platform updates

* db version update

* fix for graphql schema

* sleep

* depup
